@@ -1,3 +1,12 @@
+2012-12-02  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+	* AppController.h:
+	* AppController.m:
+	* DiffWindowController.m:
+	* Resources/main.gorm:
+	Add support for other version control systems besides CVS.
+	Currently, this includes subversion, git, mercurial and darcs.
+
 2012-08-10 Riccardo Mottola <rm@gnu.org>
 
 	* DiffWrapper.m:
